# fastapi-example

./: .gitignore  README.md  app.py  fastapi.odp  fastapi_example.db.json  pyproject.toml  pyrightconfig.json
fastapi_example/: __init__.py  client.py  config.py  dependencies.py  models.py  router.py  service.py
scripts/: create_data.py  demo.py
